--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Open+Sans:wght@400;600&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+  <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -23,5 +28,6 @@
       <include src="./partials/team.html"></include>
       <include src="./partials/price.html"></include>
     </main>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   </body>
 </html>
